Improve mobile layout for welcome page and header

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
+<!-- 
+  This HTML document represents the homepage for Himalayan Curry & Tandoor House, 
+  an establishment serving authentic Nepali and Indian cuisine. The document includes 
+  meta tags for character set, viewport settings, and a description for the page. 
+  It preconnects to Google Fonts and includes several font stylesheets for Inter, 
+  Crimson Text, and Yatra One. The body contains a root div for React rendering and 
+  includes a script for the main application logic and a Replit development banner. 
+-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, viewport-fit=cover, user-scalable=yes" />
+    <meta name="theme-color" content="#F59E0B">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
     <title>Himalayan Curry & Tandoor House - Authentic Nepali Indian Cuisine</title>
     <meta name="description" content="Experience authentic Nepali and Indian cuisine at Himalayan Curry & Tandoor House. Traditional dishes crafted with time-honored recipes and finest spices from the mountain regions." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
